--- a/style.css
+++ b/style.css
@@ -51,14 +51,42 @@ header {
     padding: 12px;
     border: 1px solid #d3d3d3;
     border-right: none;
-    border-radius: 2px 0 0 2px;
+    border-radius: 20px 0 0 20px;
 }
 
 .mid-section button {
     width: 64px;
     border: 1px solid #d3d3d3;
-    border-radius: 0 2px 2px 0;
+    border-radius: 0 20px 20px 0;
     padding-top: 4px;
     background-color: #f8f8f8;
     cursor: pointer;
+}
+
+.mid-section button:hover{
+    border-color: #c6c6c6;
+    background-color: #f0f0f0;
+}
+
+
+.mid-section .mic{
+    height: 40px;
+    width: 40px;
+    background-color: #f0f0f0;
+    margin-left: 10px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.mid-section .mic:hover{
+    background-color: #f9f9f9;
+}
+
+.right-section a{
+    padding-right: 18px;
+    text-decoration: none;
+    color: black;
 }
