--- a/style.css
+++ b/style.css
@@ -90,3 +90,72 @@ header {
     text-decoration: none;
     color: black;
 }
+
+.content-erea {
+    height: calc(100hv - 56px);
+    display: flex;
+    background-color: #f9f9f9;
+}
+
+aside {
+    height: 685px;
+    width: 280px;
+    background-color: white;
+    overflow-y: auto;
+}
+
+nav {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 15px 0;
+    padding-right: 15px;
+}
+
+.nav-link {
+    display: flex;
+    align-items: center;
+    padding: 10px 16px;
+    text-decoration: none;
+    color: black;
+}
+
+.nav-link:hover{
+    background-color: rgba(0, 0, 0, 0.05);
+}
+.nav-link span{
+    margin-left: 24px;
+    font-size: 1.4rem;
+    line-height: 2em;
+    font-weight: 400;
+    color: #030303;
+}
+
+.active {
+    background-color: #e5e5e5;
+}
+
+#active-span {
+    font-weight: 500;
+}
+
+hr {
+    height: 1px;
+    background-color: #e5e5e5;
+    margin: 10px 0;
+    border: none;
+}
+
+nav p {
+    font-size: 1.4rem;
+    color: #606060;
+    font-weight: 500;
+    padding: 8px 16px;
+    text-transform: uppercase;
+}
+
+.channel-img {
+    height: 24px;
+    width: 24px;
+    border-radius: 50%;
+}
